# aws_agent

./: README.md
aws_agent/: .env  .gitignore  Dockerfile  pyproject.toml
aws_agent/src/aws_agent/: api.py  crew.py  main.py
aws_agent/src/aws_agent/config/: agents.yaml  tasks.yaml
aws_agent/src/aws_agent/tests/: test_api.py  test_appinsights_logger.py
aws_agent/src/aws_agent/tools/: appinsights_logger.py
