[project]
name = "aws_agent"
version = "0.1.0"
description = "aws-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3>=1.38.27",
    "crewai[tools]>=0.121.1,<1.0.0",
    "opencensus-ext-azure>=1.1.15",
]

[project.scripts]
aws_agent = "aws_agent.main:run"
run_crew = "aws_agent.main:run"
train = "aws_agent.main:train"
replay = "aws_agent.main:replay"
test = "aws_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
